--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Odliczanie do konca zajec</p>
-    <span class = "d">.</span>d:
-    <span class = "h">.</span>h:
-    <span class = "m">.</span>m:
-    <span class = "s">.</span>s
+    <div>
+        <p>Odliczanie do wakacji</p>
+        <span class = "d">.</span>d:
+        <span class = "h">.</span>h:
+        <span class = "m">.</span>m:
+        <span class = "s">.</span>s
+    </div>
 <script src="main.js"></script>
 </body>
 </html>
