--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <p>Odliczanie do wakacji</p>
+        <p>Odliczanie do wakacji:</p>
         <span class = "d">.</span>d:
         <span class = "h">.</span>h:
         <span class = "m">.</span>m:
